# budgetbot

./: BUDGETBOT-MACOS-COMPLETE.md  BUILD-NATIVE-APP.md  Cargo.toml  README-Electron-macOS.md  README-MACOS.md  build-electron.sh  build-macos.js  create-local-server.js  create-macos-app.sh  demo-electron-app.sh  electron-builder.json  electron-dev.sh  fix-package-json.js  install-budgetbot-macos.sh  install-budgetbot.sh  local-server.js  package-for-macos.sh  package-lock.json  package.json  quick-electron-test.sh  setup-macos.sh  simple-install.sh  start-electron.sh  storage-fix.js  test-electron.sh
.config/.semgrep/: settings.yml
BudgetBot-macOS-Package/: README.md  install-budgetbot-macos.sh  install.sh  main.cjs  package.json  preload.cjs  run.sh
BudgetBot-macOS-Package/BudgetBot-macOS-Final/: SETUP-INSTRUCTIONS.md  fix-budgetbot.sh  install-budgetbot-macos.sh
BudgetBot-macOS-Simple/: README.md  main.js  package.json
assets/: entitlements.mac.plist  logo2.icns
attached_assets/: Pasted--Valid-identities-only-0-valid-identities-found--1750177906071_1750177906071.txt  Pasted-BudgetBot-package-json-writing-effective-config-file-dist-electron-builder-effective-config-yam-1750177699981_1750177699982.txt
client/src/: App.tsx  index.css
client/src/lib/: utils.ts
dist-electron/: builder-effective-config.yaml
dist-macos/: DISTRIBUTION-INFO.md
dist-macos/BudgetBot-macOS/: .env.macos.example  QUICK-START.md  package-for-macos.sh  start-simple.sh
dist-macos/BudgetBot-macOS-v2/: MACOS-FIX.md  README-macOS.md  fixed-storage.ts  launch-budgetbot-macos.command
electron/: electron-builder.json  main.cjs  main.js  preload.js
electron/assets/: create_icon.py
server/: routes.ts  storage.ts
shared/: schema.ts
src/: app.rs  main.rs
src/models/: budget.rs  config.rs  expense.rs  mod.rs  preset.rs  profile.rs  shared.rs  template.rs
src/storage/: json_store.rs  mod.rs
src/ui/: calculator.rs  category_manager.rs  dashboard.rs  expense_form.rs  history.rs  income_form.rs  mod.rs  preset_panel.rs  profile_manager.rs  profile_selector.rs  template_manager.rs
(+47 files in other folders)
